--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "preferGlobal": "true",
   "dependencies": {
-    "optimist": "0.6.1"
+    "optimist": "0.6.1",
+    "commander": "2.9.0"
   },
   "author": "",
   "license": "ISC"
